React components app

--- a/Back/excercisesJS/index.html
+++ b/Back/excercisesJS/index.html
@@ -8,9 +8,17 @@
     <title>Practice sheet</title>
 </head>
 <body>
-    <div class="output">
-
+    <div class="component">
+        <div class="search-container">
+            <label for="searchbar">Search</label>
+            <button id="search-button">Search</button>
+            <input type="search" id="searchbar" >
+        </div>
+        <div class="fetched-data">
+            <img id="image" src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse1.mm.bing.net%2Fth%3Fid%3DOIP.E4gCagrjAkQ5td5qjSc3rwHaE7%26pid%3DApi&f=1&ipt=1201ea1e5bdb3d08434706fa5be899d1a472f5ace8a0ddba6ecd56bd65ffede3&ipo=images" alt="">
+            <h2 id="movie-title">title</h2>
+        </div>
     </div>
 </body>
-<script src="sheet1.js"></script>
+<script src="index.js"></script>
 </html>
